force-app/main/default/objects/player__c/player__c.object-meta.xml
<CustomObject>
    <label>選手</label>
    <nameField>
        <label>選手名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>