force-app/main/default/objects/player__c/fields/bats__c.field-meta.xml
<CustomField>
    <fullName>bats__c</fullName>
    <label>bats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>