force-app/main/default/objects/player__c/fields/birth_country__c.field-meta.xml
<CustomField>
    <fullName>birth_country__c</fullName>
    <label>birth_country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>