force-app/main/default/objects/player__c/fields/college__c.field-meta.xml
<CustomField>
    <fullName>college__c</fullName>
    <label>college</label>
    <length>255</length>
    <type>Text</type>
</CustomField>