force-app/main/default/objects/player__c/fields/height_feet__c.field-meta.xml
<CustomField>
    <fullName>height_feet__c</fullName>
    <label>height_feet</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>