force-app/main/default/objects/player__c/fields/height_inches__c.field-meta.xml
<CustomField>
    <fullName>height_inches__c</fullName>
    <label>height_inches</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>