force-app/main/default/objects/player__c/fields/high_school__c.field-meta.xml
<CustomField>
    <fullName>high_school__c</fullName>
    <label>high_school</label>
    <length>255</length>
    <type>Text</type>
</CustomField>