force-app/main/default/objects/player__c/fields/name_display_first_last__c.field-meta.xml
<CustomField>
    <fullName>name_display_first_last__c</fullName>
    <label>name_display_first_last</label>
    <length>255</length>
    <type>Text</type>
</CustomField>