force-app/main/default/objects/player__c/fields/player_id__c.field-meta.xml
<CustomField>
    <fullName>player_id__c</fullName>
    <externalId>true</externalId>
    <label>player_id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>