force-app/main/default/objects/player__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <label>position</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>