force-app/main/default/objects/player__c/fields/pro_debut_date__c.field-meta.xml
<CustomField>
    <fullName>pro_debut_date__c</fullName>
    <label>pro_debut_date</label>
    <type>Date</type>
</CustomField>