force-app/main/default/objects/player__c/fields/throws__c.field-meta.xml
<CustomField>
    <fullName>throws__c</fullName>
    <label>throws</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>