force-app/main/default/objects/player__c/fields/weight__c.field-meta.xml
<CustomField>
    <fullName>weight__c</fullName>
    <description>ポンド</description>
    <label>weight</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>