force-app/main/default/objects/player__c/fields/weight_kg__c.field-meta.xml
<CustomField>
    <fullName>weight_kg__c</fullName>
    <formula>weight__c  / 2.2046</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>体重(Kg)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>