force-app/main/default/objects/player__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>player_id__c</columns>
    <columns>position__c</columns>
    <columns>birth_country__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>